--- a/index.html
+++ b/index.html
@@ -253,8 +253,8 @@
                 'nav.home': 'ໜ້າຫຼັກ', 'nav.menu': 'ເມນູ', 'nav.franchise': 'ແຟຣນໄຊສ໌', 'nav.about': 'ກ່ຽວກັບ', 'nav.contact': 'ຕິດຕໍ່',
                 
                 // HERO section
-                'hero.eyebrow': 'ອາຫານໄທລົດຊາດ — ວຽງຈັນ', 
-                'hero.h1': 'ລົດຊາດອາຫານໄທດັ່ງເດີມ<br>ຮັບປະສົບການອາຫານຄັວຫຼວງ', 
+                'hero.eyebrow': 'ອາຫານໄທ ລົດຊາດແບບດັ້ງເດີມ', 
+                'hero.h1': 'ອາຫານໄທດັ່ງເດີມ<br>ຮັບປະສົບການອາຫານຄັວຫຼວງ', 
                 'hero.lead': 'ບໍລິການ Fine dining ແລະ ໂອກາດແຟຣນໄຊສ໌', 
                 'hero.cta1': 'ຊອກແຟຣນໄຊສ໌', 'hero.cta2': 'ຈອງທົດສອບ', 
                 'hero.card.title': 'ບ່ອນຮັບປະທານ ແລະ ຄຸນນະພາບອາຫານ', 
