--- a/index.html
+++ b/index.html
@@ -237,4 +237,51 @@
                 'nav.home': 'ໜ້າຫຼັກ', 'nav.menu': 'ເມນູ', 'nav.franchise': 'ແຟຣນໄຊສ໌', 'nav.about': 'ກ່ຽວກັບ', 'nav.contact': 'ຕິດຕໍ່',
                 'hero.eyebrow': 'ອາຫານໄທ ລົດຊາດແບບດັ້ງເດີມ', 'hero.h1': 'ອາຫານໄທດັ່ງເດີມ<br>ຮັບປະສົບການອາຫານຄັວຫຼວງ', 'hero.lead': 'ບໍລິການ Fine dining ແລະ ໂອກາດແຟຣນໄຊສ໌', 'hero.cta1': 'ຊອກແຟຣນໄຊສ໌', 'hero.cta2': 'ຈອງທົດສອບ', 'hero.card.title': 'ບ່ອນຮັບປະທານ ແລະ ຄຸນນະພາບອາຫານ', 'hero.card.lead': 'ບ່ອນສະແດງສຸມທິ ແລະ ຄຸນນະພາບອາຫານ',
                 'menu.title': 'ເມນູ & ຮູບພາບ', 'menu.sub': 'ອາຫານດັ່ງເດີມ', 'menu.sample': 'ເມນູຕົວຢ່າງ', 'menu.col.dish': 'ອາຫານ', 'menu.col.price': 'ລາຄາ', 'menu.item.padthai': 'ຜັດໄທ (ເຄີງ)', 'menu.item.green': 'ເຂົ້າໝາກພື້ນ', 'menu.item.dessert': 'ຂອງຫວານ',
-                'franchise.title': 'ໂອກາດແຟຣນໄຊສ໌', 'franchise.sub': 'ລາຍການການລົງທຶນ 3 ປະເພດ', 'franchise.pkg.min': 'Minimal', 'franchise.pkg.min.desc': 'ເຫມາະສຳລັບຕະຫຼາດ & kiosk — ສະຫຼຸບສະຫຼຸບ', 'franchise.pkg.med': 'Medium', 'franchise.pkg.med.desc': 'ບໍລິການຈັດການ ແລະ ອຸປະກອນ', 'franchise.pkg.sta': 'Stand Alone', 'franchise.pkg.sta.desc': 'ຕັ້ງຮ້ານສົມບູນ ພ້ອມການສອນ & ການຕະຫຼາດ', 'franchise.what': 'ສິ່ງທີ່ຜູ້ເຂົ້າຮ່ວມຈະໄດ້', 'franchise.list.1': 'ບົດສູດແລະລາຍການຜູ້ສະໜອງ', 'franchise.list.2': 'ການຝຶກອົບຮົມ', 'franchise.list.3': 'ວັດຖຸການຕະຫຼາດ
+                'franchise.title': 'ໂອກາດແຟຣນໄຊສ໌', 'franchise.sub': 'ລາຍການການລົງທຶນ 3 ປະເພດ', 'franchise.pkg.min': 'Minimal', 'franchise.pkg.min.desc': 'ເຫມາະສຳລັບຕະຫຼາດ & kiosk — ສະຫຼຸບສະຫຼຸບ', 'franchise.pkg.med': 'Medium', 'franchise.pkg.med.desc': 'ບໍລິການຈັດການ ແລະ ອຸປະກອນ', 'franchise.pkg.sta': 'Stand Alone', 'franchise.pkg.sta.desc': 'ຕັ້ງຮ້ານສົມບູນ ພ້ອມການສອນ & ການຕະຫຼາດ', 'franchise.what': 'ສິ່ງທີ່ຜູ້ເຂົ້າຮ່ວມຈະໄດ້', 'franchise.list.1': 'ບົດສູດແລະລາຍການຜູ້ສະໜອງ', 'franchise.list.2': 'ການຝຶກອົບຮົມ', 'franchise.list.3': 'ວັດຖຸການຕະຫຼາດ & POS', 'franchise.cta': 'ສະໝັກດຽວນີ້', 'franchise.cta2': 'ຕິດຕໍ່ຝາກຂາ',
+                'about.title': 'ກ່ຽວກັບຄົວຫຼວງ', 'about.lead': 'ຄົວຫຼວງເລີ່ມຈາກຄວາມຮັກຕໍ່ອາຫານໄທ ແລະ ຕ້ອງການນຳຮັບຮອງຮູບແບບຮອບດ້ານ.', 'about.mission': 'ພາຍໃນ: ນຳເສີອາຫານໄທຊັດສະເລີຍແລະແຜນການແຟຣນໄຊສ໌', 'about.vision': 'ວິຊັນ: ຂະຫຍາຍເປັນ 50 ສາຂາ',
+                'contact.title': 'ຕິດຕໍ່ພວກເຮົາ', 'contact.address': 'ທີ່ຢູ່', 'contact.phone': 'ເບີໂທ', 'contact.whatsapp': 'WhatsApp'
+            },
+            th: { // 🟢 เพิ่มการแปลภาษาไทย
+                'nav.home': 'หน้าหลัก', 'nav.menu': 'เมนู', 'nav.franchise': 'แฟรนไชส์', 'nav.about': 'เกี่ยวกับ', 'nav.contact': 'ติดต่อ',
+                'hero.eyebrow': 'ตำรับอาหารไทยโบราณ — เวียงจันทน์', 'hero.h1': 'รสชาติไทยแท้ตำรับวัง<br>สัมผัสประสบการณ์ครัวหลวง', 'hero.lead': 'ประสบการณ์ทานอาหารชั้นเลิศ และโอกาสแฟรนไชส์.', 'hero.cta1': 'สำรวจแฟรนไชส์', 'hero.cta2': 'จองโต๊ะ/เยี่ยมชม', 'hero.card.title': 'บรรยากาศหรูหรา รสชาติแบบดั้งเดิม', 'hero.card.lead': 'สถานที่สวยงาม และคุณภาพอาหารที่ไว้ใจได้',
+                'menu.title': 'เมนู & แกลเลอรี', 'menu.sub': 'อาหารไทยต้นตำรับ • เมนูแนะนำ', 'menu.sample': 'เมนูตัวอย่าง — อาหารยอดนิยม', 'menu.col.dish': 'เมนู', 'menu.col.price': 'ราคา', 'menu.item.padthai': 'ผัดไทย (เมนูแนะนำ)', 'menu.item.green': 'แกงเขียวหวาน', 'menu.item.dessert': 'ขนมไทยดั้งเดิม',
+                'franchise.title': 'โอกาสแฟรนไชส์', 'franchise.sub': '3 แพ็กเกจการลงทุน • พร้อมต่อยอดธุรกิจ', 'franchise.pkg.min': 'ขนาดเล็ก', 'franchise.pkg.min.desc': 'สำหรับตลาด & คีออสก์ — สนับสนุนสูตรอาหารและการฝึกอบรมพื้นฐาน', 'franchise.pkg.med': 'ขนาดกลาง', 'franchise.pkg.med.desc': 'แพ็กเกจการจัดการ — อุปกรณ์ และการดำเนินงานบางส่วน', 'franchise.pkg.sta': 'ร้านเดี่ยว', 'franchise.pkg.sta.desc': 'ติดตั้งร้านอาหารครบวงจร พร้อมการฝึกอบรมและการตลาด', 'franchise.what': 'สิ่งที่ผู้ซื้อแฟรนไชส์จะได้รับ', 'franchise.list.1': 'สูตรอาหารฉบับเต็มและรายชื่อซัพพลายเออร์', 'franchise.list.2': 'การฝึกอบรมและการสนับสนุนหน้างาน', 'franchise.list.3': 'สื่อการตลาดและการตั้งค่า POS', 'franchise.cta': 'สมัครตอนนี้', 'franchise.cta2': 'ติดต่อฝ่ายขาย',
+                'about.title': 'เกี่ยวกับครัวหลวง', 'about.lead': 'ครัวหลวงเริ่มต้นจากความหลงใหลในการนำรสชาติไทยตำรับวังมาสู่เวียงจันทน์ เราผสานสูตรอาหารดั้งเดิมเข้ากับประสบการณ์การรับประทานอาหารที่ทันสมัย', 'about.mission': 'พันธกิจ: เพื่อมอบประสบการณ์อาหารไทยระดับพรีเมียมและโซลูชั่นแฟรนไชส์ที่ปรับขนาดได้', 'about.vision': 'วิสัยทัศน์: ขยายสาขาให้ได้ 50 แห่งทั่วประเทศลาว',
+                'contact.title': 'ติดต่อเรา', 'contact.address': 'ที่อยู่', 'contact.phone': 'โทรศัพท์', 'contact.whatsapp': 'WhatsApp'
+            }
+        };
+
+        const elems = document.querySelectorAll('[data-i18n]');
+        function setLang(lang){
+            const languageCode = (lang === 'la') ? 'lo' : (lang === 'th' ? 'th' : 'en'); // เพิ่มการกำหนดรหัสภาษาไทย
+            document.documentElement.lang = languageCode;
+
+            elems.forEach(el => {
+                const key = el.getAttribute('data-i18n');
+                // ใช้ภาษาที่เลือก หรือภาษาอังกฤษเป็นค่าเริ่มต้น
+                const text = (I18N[lang] && I18N[lang][key]) || I18N['en'][key] || el.textContent;
+
+                // ใช้ innerHTML สำหรับ Hero H1 เพื่อรองรับ <br>
+                if (key === 'hero.h1') {
+                    el.innerHTML = text;
+                } else {
+                    el.textContent = text;
+                }
+            });
+        }
+        
+        document.getElementById('lang-en').addEventListener('click', () => setLang('en'));
+        document.getElementById('lang-la').addEventListener('click', () => setLang('la'));
+        document.getElementById('lang-th').addEventListener('click', () => setLang('th')); // เพิ่ม Event Listener สำหรับภาษาไทย
+
+        // default language: English
+        setLang('en');
+
+        document.getElementById('year').textContent = new Date().getFullYear();
+
+        function openForm(type){
+            document.getElementById('contact-form').scrollIntoView({behavior:'smooth'});
+        }
+    </script>
+</body>
+</html>
