--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" /> 
     <title>Krua Luang — Royal Thai Cuisine | ครัวหลวง</title>
     <meta name="description" content="Krua Luang — Royal Thai cuisine in Vientiane. Fine dining, authentic Thai flavours, and franchise opportunities. ຮ້ານອາຫານໄທຮຸ່ງໄຮສຶດ ແລະ ໂອກາດແຟຣນໄຊສ໌." />
-    <link rel="icon" type="image/png" href="/assets/favicon.png"> 
+    <link rel="icon" type="image/png" href="assets/favicon.png"> 
     
     <style>
         /* Minimal modern styles — change colors to match brand */
