--- a/index.html
+++ b/index.html
@@ -66,7 +66,24 @@
     </header>
 
     <!-- HERO -->
-    <section id="home" class="hero">
+    <!-- HERO -->
+<section id="home" class="hero">
+  <div class="hero-overlay">
+    <div class="hero-content">
+      <div class="eyebrow" data-i18n="hero.eyebrow">Royal Thai Cuisine — Vientiane</div>
+      <h1 data-i18n="hero.h1">
+        Authentic Royal Thai Flavours<br>
+        <span data-i18n="hero.h1_la">ຮັບປະສົບການອາຫານຄັວຫຼວງ</span>
+      </h1>
+      <p data-i18n="hero.lead">Fine dining experience &amp; franchise opportunities.<br>ສະບັບຫວຼງ ຮູບແບບຮອບດ້ານ</p>
+      <div class="cta">
+        <button class="btn" onclick="location.href='#franchise'" data-i18n="hero.cta1">Explore Franchise</button>
+        <button class="btn btn-outline" onclick="document.getElementById('contact-form').scrollIntoView()" data-i18n="hero.cta2">Book a Visit</button>
+      </div>
+    </div>
+  </div>
+</section>
+
       <div>
         <div class="eyebrow" data-i18n="hero.eyebrow">Royal Thai Cuisine — Vientiane</div>
         <h1 data-i18n="hero.h1">Authentic Royal Thai flavours<br><span data-i18n="hero.h1_la">ຮັບປະສົບການອາຫານຄັວຫຼວງ</span></h1>
