--- a/index.html
+++ b/index.html
@@ -145,15 +145,78 @@
 
 <!-- HERO -->
 <section id="home" class="hero">
-  <div class="hero-content">
-    <h4 data-i18n="hero.eyebrow">ครัวหลวง — รสชาติไทยต้นตำรับ</h4>
-    <h1 data-i18n="hero.title">Royal Thai Taste</h1>
-    <p data-i18n="hero.desc">ประสบการณ์อาหารไทยชั้นเลิศ พร้อมโอกาสแฟรนไชส์ทั่วลาวและไทย</p>
-    <button class="btn" data-i18n="hero.cta1">ดูแฟรนไชส์</button>
-    <button class="btn" data-i18n="hero.cta2">นัดเยี่ยมชม</button>
+  <div class="hero-overlay">
+    <div class="hero-content">
+      <h4>Krualuang — Authentic Thai Cuisine</h4>
+      <h1>Royal Thai Taste</h1>
+      <p>Fine dining and franchise opportunities across Laos & Thailand.</p>
+      <div class="hero-buttons">
+        <a href="#franchise" class="btn btn-primary">Explore Franchise</a>
+        <a href="#contact" class="btn btn-secondary">Book a Visit</a>
+      </div>
+    </div>
   </div>
 </section>
 
+<style>
+.hero {
+  position: relative;
+  width: 100vw;                /* ให้เต็มความกว้างจอ */
+  height: 100vh;               /* ให้เต็มความสูงจอ */
+  background-image: url('images/hero-bg.jpg');  /* ภาพพื้นหลัง */
+  background-size: cover;      /* ให้ภาพขยายเต็มโดยไม่บิดเบี้ยว */
+  background-position: center; /* จัดภาพให้อยู่ตรงกลาง */
+  background-repeat: no-repeat;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+}
+
+.hero-overlay {
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  background: rgba(0, 0, 0, 0.35);  /* เพิ่มเงาดำบางๆ ให้ตัวอักษรอ่านง่าย */
+}
+
+.hero-content {
+  position: relative;
+  z-index: 2;
+  text-align: center;
+  max-width: 90%;
+}
+
+.hero h1 {
+  font-size: 3.5rem;
+  font-weight: 700;
+}
+
+.hero h4 {
+  font-size: 1.2rem;
+  letter-spacing: 1px;
+}
+
+.hero p {
+  font-size: 1.1rem;
+  margin-bottom: 1.5rem;
+}
+
+.hero-buttons a {
+  background: #ffd700;
+  color: black;
+  padding: 0.8rem 1.5rem;
+  border-radius: 50px;
+  text-decoration: none;
+  margin: 0 0.5rem;
+  transition: 0.3s;
+}
+
+.hero-buttons a:hover {
+  background: #ffbf00;
+}
+</style>
+  
 <!-- ABOUT -->
 <section id="about">
   <h2 data-i18n="about.title">เกี่ยวกับครัวหลวง</h2>
