--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ครัวหลวง — Royal Thai Cuisine</title>
+  <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
       font-family: "Prompt", sans-serif;
@@ -50,49 +51,42 @@
       transform: scale(1.15);
       border-color: gold;
     }
+    /* HERO SECTION */
     .hero {
+      position: relative;
+      width: 100vw;
+      height: 100vh;
       background: url('images/hero-bg.jpg') center/cover no-repeat;
-      height: 90vh;
       display: flex;
       justify-content: center;
       align-items: center;
-      text-align: center;
       color: white;
-      position: relative;
+      text-align: center;
     }
     .hero::before {
       content: "";
       position: absolute;
       inset: 0;
-      background: rgba(0,0,0,0.5);
+      background: rgba(0,0,0,0.45);
     }
     .hero-content {
       position: relative;
       z-index: 2;
-      max-width: 700px;
+      max-width: 90%;
     }
-    .hero h1 {
-      font-size: 3rem;
-      margin-bottom: 1rem;
-    }
-    .hero p {
-      font-size: 1.2rem;
-      margin-bottom: 2rem;
-    }
-    .btn {
-      background: gold;
+    .hero h4 { font-size: 1.3rem; letter-spacing: 1px; }
+    .hero h1 { font-size: 3.5rem; font-weight: 700; margin: 1rem 0; }
+    .hero p { font-size: 1.2rem; margin-bottom: 1.8rem; }
+    .hero-buttons a {
+      background: #ffd700;
       color: #000;
       padding: 0.8rem 1.5rem;
-      border: none;
-      border-radius: 25px;
-      cursor: pointer;
-      font-size: 1rem;
+      border-radius: 50px;
+      text-decoration: none;
       margin: 0 0.5rem;
       transition: 0.3s;
     }
-    .btn:hover {
-      background: #e6b800;
-    }
+    .hero-buttons a:hover { background: #ffbf00; }
     section {
       padding: 5rem 1.5rem;
       max-width: 1000px;
@@ -110,13 +104,10 @@
       color: white;
     }
     @media (max-width: 768px) {
-      nav {
-        flex-direction: column;
-        gap: 0.5rem;
-      }
-      .hero h1 { font-size: 2rem; }
+      nav { flex-direction: column; gap: 0.5rem; }
+      .hero h1 { font-size: 2.2rem; }
       .hero p { font-size: 1rem; }
-      .btn { margin: 0.3rem 0; display: block; width: fit-content; margin-left: auto; margin-right: auto; }
+      .hero-buttons a { display: block; margin: 0.5rem auto; width: fit-content; }
     }
   </style>
 </head>
@@ -124,10 +115,8 @@
 
 <header>
   <nav>
-    <div class="nav-left">
-      <strong>KRUALUANG</strong>
-    </div>
-    <div class="nav-right">
+    <div><strong>KRUALUANG</strong></div>
+    <div>
       <a href="#home" data-i18n="menu.home">หน้าแรก</a>
       <a href="#about" data-i18n="menu.about">เกี่ยวกับเรา</a>
       <a href="#franchise" data-i18n="menu.franchise">แฟรนไชส์</a>
@@ -145,78 +134,17 @@
 
 <!-- HERO -->
 <section id="home" class="hero">
-  <div class="hero-overlay">
-    <div class="hero-content">
-      <h4>Krualuang — Authentic Thai Cuisine</h4>
-      <h1>Royal Thai Taste</h1>
-      <p>Fine dining and franchise opportunities across Laos & Thailand.</p>
-      <div class="hero-buttons">
-        <a href="#franchise" class="btn btn-primary">Explore Franchise</a>
-        <a href="#contact" class="btn btn-secondary">Book a Visit</a>
-      </div>
+  <div class="hero-content">
+    <h4 data-i18n="hero.eyebrow">Krualuang — Authentic Thai Cuisine</h4>
+    <h1 data-i18n="hero.title">Royal Thai Taste</h1>
+    <p data-i18n="hero.desc">Fine dining and franchise opportunities across Laos & Thailand.</p>
+    <div class="hero-buttons">
+      <a href="#franchise" data-i18n="hero.cta1">Explore Franchise</a>
+      <a href="#contact" data-i18n="hero.cta2">Book a Visit</a>
     </div>
   </div>
 </section>
 
-<style>
-.hero {
-  position: relative;
-  width: 100vw;                /* ให้เต็มความกว้างจอ */
-  height: 100vh;               /* ให้เต็มความสูงจอ */
-  background-image: url('images/hero-bg.jpg');  /* ภาพพื้นหลัง */
-  background-size: cover;      /* ให้ภาพขยายเต็มโดยไม่บิดเบี้ยว */
-  background-position: center; /* จัดภาพให้อยู่ตรงกลาง */
-  background-repeat: no-repeat;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: white;
-}
-
-.hero-overlay {
-  position: absolute;
-  top: 0; left: 0;
-  width: 100%; height: 100%;
-  background: rgba(0, 0, 0, 0.35);  /* เพิ่มเงาดำบางๆ ให้ตัวอักษรอ่านง่าย */
-}
-
-.hero-content {
-  position: relative;
-  z-index: 2;
-  text-align: center;
-  max-width: 90%;
-}
-
-.hero h1 {
-  font-size: 3.5rem;
-  font-weight: 700;
-}
-
-.hero h4 {
-  font-size: 1.2rem;
-  letter-spacing: 1px;
-}
-
-.hero p {
-  font-size: 1.1rem;
-  margin-bottom: 1.5rem;
-}
-
-.hero-buttons a {
-  background: #ffd700;
-  color: black;
-  padding: 0.8rem 1.5rem;
-  border-radius: 50px;
-  text-decoration: none;
-  margin: 0 0.5rem;
-  transition: 0.3s;
-}
-
-.hero-buttons a:hover {
-  background: #ffbf00;
-}
-</style>
-  
 <!-- ABOUT -->
 <section id="about">
   <h2 data-i18n="about.title">เกี่ยวกับครัวหลวง</h2>
@@ -238,96 +166,92 @@
   <p>โทร: +856 20 1234 5678 | Line: @krualuang</p>
 </section>
 
-<footer>
-  © 2025 Krualuang — Royal Thai Cuisine
-</footer>
+<footer>© 2025 Krualuang — Royal Thai Cuisine</footer>
 
 <script>
-  const translations = {
-    th: {
-      "menu.home": "หน้าแรก",
-      "menu.about": "เกี่ยวกับเรา",
-      "menu.franchise": "แฟรนไชส์",
-      "menu.faq": "คำถามที่พบบ่อย",
-      "menu.contact": "ติดต่อ",
-      "hero.eyebrow": "ครัวหลวง — รสชาติไทยต้นตำรับ",
-      "hero.title": "Royal Thai Taste",
-      "hero.desc": "ประสบการณ์อาหารไทยชั้นเลิศ พร้อมโอกาสแฟรนไชส์ทั่วลาวและไทย",
-      "hero.cta1": "ดูแฟรนไชส์",
-      "hero.cta2": "นัดเยี่ยมชม",
-      "about.title": "เกี่ยวกับครัวหลวง",
-      "about.text": "ครัวหลวงคือแบรนด์อาหารไทยที่เน้นความอร่อยแบบต้นตำรับ ผสานแฟรนไชส์ทันสมัย ลงทุนเริ่มต้นหลักหมื่น สร้างยอดขายหลักล้านได้ง่าย ด้วยสูตรเฉพาะและระบบมาตรฐาน",
-      "franchise.title": "แพ็กเกจแฟรนไชส์",
-      "contact.title": "ติดต่อแฟรนไชส์",
-    },
-    la: {
-      "menu.home": "ໜ້າຫຼັກ",
-      "menu.about": "ກ່ຽວກັບພວກເຮົາ",
-      "menu.franchise": "ແຟຣນໄຊສ໌",
-      "menu.faq": "ຄຳຖາມທີ່ພົບເປັນປະຈຳ",
-      "menu.contact": "ຕິດຕໍ່",
-      "hero.eyebrow": "ຄັວຫຼວງ — ອາຫານໄທຕົ້ນສະບັບ",
-      "hero.title": "ຮັບປະສົບການອາຫານຄັວຫຼວງ",
-      "hero.desc": "ປະສົບການອາຫານທີ່ປະທັບໃຈ ແລະ ໂອກາດແຟຣນໄຊສ໌ ທົ່ວລາວ-ໄທ",
-      "hero.cta1": "ເບິ່ງແຟຣນໄຊສ໌",
-      "hero.cta2": "ນັດຢ້ຽມຊົມ",
-      "about.title": "ກ່ຽວກັບຄັວຫຼວງ",
-      "about.text": "ຄັວຫຼວງເປັນແບຣນອາຫານໄທຕົ້ນສະບັບ ທີ່ມີລະບົບແຟຣນໄຊສ໌ທັນສະໄໝ ລົງທຶນນ້ອຍ ແຕ່ສາມາດສ້າງລາຍໄດ້ຫຼາຍ.",
-      "franchise.title": "ແພັກແກັດແຟຣນໄຊສ໌",
-      "contact.title": "ຕິດຕໍ່ແຟຣນໄຊສ໌",
-    },
-    en: {
-      "menu.home": "Home",
-      "menu.about": "About Us",
-      "menu.franchise": "Franchise",
-      "menu.faq": "FAQ",
-      "menu.contact": "Contact",
-      "hero.eyebrow": "Krualuang — Authentic Thai Cuisine",
-      "hero.title": "Royal Thai Taste",
-      "hero.desc": "Fine dining and franchise opportunities across Laos & Thailand.",
-      "hero.cta1": "Explore Franchise",
-      "hero.cta2": "Book a Visit",
-      "about.title": "About Krualuang",
-      "about.text": "Krualuang offers authentic Thai flavors with modern franchise opportunities. Start small and scale fast with proven recipes and systems.",
-      "franchise.title": "Franchise Packages",
-      "contact.title": "Contact Franchise",
-    },
-    zh: {
-      "menu.home": "首页",
-      "menu.about": "关于我们",
-      "menu.franchise": "加盟",
-      "menu.faq": "常见问题",
-      "menu.contact": "联系我们",
-      "hero.eyebrow": "皇家厨房 — 正宗泰国美食",
-      "hero.title": "皇家泰式风味",
-      "hero.desc": "精致用餐体验与加盟机会，遍及老挝与泰国。",
-      "hero.cta1": "查看加盟方案",
-      "hero.cta2": "预约参观",
-      "about.title": "关于皇家厨房",
-      "about.text": "皇家厨房提供正宗泰式风味与现代加盟体系，投资少、回报快，是东南亚增长最快的泰餐品牌之一。",
-      "franchise.title": "加盟方案",
-      "contact.title": "联系我们",
-    },
-  };
-
-  function setLanguage(lang) {
-    document.querySelectorAll("[data-i18n]").forEach(el => {
-      const key = el.getAttribute("data-i18n");
-      if (translations[lang] && translations[lang][key]) {
-        el.innerText = translations[lang][key];
-      }
-    });
-    localStorage.setItem("lang", lang);
+const translations = {
+  th: {
+    "menu.home": "หน้าแรก",
+    "menu.about": "เกี่ยวกับเรา",
+    "menu.franchise": "แฟรนไชส์",
+    "menu.faq": "คำถามที่พบบ่อย",
+    "menu.contact": "ติดต่อ",
+    "hero.eyebrow": "ครัวหลวง — รสชาติไทยต้นตำรับ",
+    "hero.title": "Royal Thai Taste",
+    "hero.desc": "ประสบการณ์อาหารไทยชั้นเลิศ พร้อมโอกาสแฟรนไชส์ทั่วลาวและไทย",
+    "hero.cta1": "ดูแฟรนไชส์",
+    "hero.cta2": "นัดเยี่ยมชม",
+    "about.title": "เกี่ยวกับครัวหลวง",
+    "about.text": "ครัวหลวงคือแบรนด์อาหารไทยที่เน้นความอร่อยแบบต้นตำรับ ผสานแฟรนไชส์ทันสมัย ลงทุนเริ่มต้นหลักหมื่น สร้างยอดขายหลักล้านได้ง่าย ด้วยสูตรเฉพาะและระบบมาตรฐาน",
+    "franchise.title": "แพ็กเกจแฟรนไชส์",
+    "contact.title": "ติดต่อแฟรนไชส์"
+  },
+  la: {
+    "menu.home": "ໜ້າຫຼັກ",
+    "menu.about": "ກ່ຽວກັບພວກເຮົາ",
+    "menu.franchise": "ແຟຣນໄຊສ໌",
+    "menu.faq": "ຄຳຖາມທີ່ພົບເປັນປະຈຳ",
+    "menu.contact": "ຕິດຕໍ່",
+    "hero.eyebrow": "ຄັວຫຼວງ — ອາຫານໄທຕົ້ນສະບັບ",
+    "hero.title": "ຮັບປະສົບການອາຫານຄັວຫຼວງ",
+    "hero.desc": "ປະສົບການອາຫານທີ່ປະທັບໃຈ ແລະ ໂອກາດແຟຣນໄຊສ໌ ທົ່ວລາວ-ໄທ",
+    "hero.cta1": "ເບິ່ງແຟຣນໄຊສ໌",
+    "hero.cta2": "ນັດຢ້ຽມຊົມ",
+    "about.title": "ກ່ຽວກັບຄັວຫຼວງ",
+    "about.text": "ຄັວຫຼວງເປັນແບຣນອາຫານໄທຕົ້ນສະບັບ ທີ່ມີລະບົບແຟຣນໄຊສ໌ທັນສະໄໝ ລົງທຶນນ້ອຍ ແຕ່ສາມາດສ້າງລາຍໄດ້ຫຼາຍ.",
+    "franchise.title": "ແພັກແກັດແຟຣນໄຊສ໌",
+    "contact.title": "ຕິດຕໍ່ແຟຣນໄຊສ໌"
+  },
+  en: {
+    "menu.home": "Home",
+    "menu.about": "About Us",
+    "menu.franchise": "Franchise",
+    "menu.faq": "FAQ",
+    "menu.contact": "Contact",
+    "hero.eyebrow": "Krualuang — Authentic Thai Cuisine",
+    "hero.title": "Royal Thai Taste",
+    "hero.desc": "Fine dining and franchise opportunities across Laos & Thailand.",
+    "hero.cta1": "Explore Franchise",
+    "hero.cta2": "Book a Visit",
+    "about.title": "About Krualuang",
+    "about.text": "Krualuang offers authentic Thai flavors with modern franchise opportunities. Start small and scale fast with proven recipes and systems.",
+    "franchise.title": "Franchise Packages",
+    "contact.title": "Contact Franchise"
+  },
+  zh: {
+    "menu.home": "首页",
+    "menu.about": "关于我们",
+    "menu.franchise": "加盟",
+    "menu.faq": "常见问题",
+    "menu.contact": "联系我们",
+    "hero.eyebrow": "皇家厨房 — 正宗泰国美食",
+    "hero.title": "皇家泰式风味",
+    "hero.desc": "精致用餐体验与加盟机会，遍及老挝与泰国。",
+    "hero.cta1": "查看加盟方案",
+    "hero.cta2": "预约参观",
+    "about.title": "关于皇家厨房",
+    "about.text": "皇家厨房提供正宗泰式风味与现代加盟体系，投资少、回报快，是东南亚增长最快的泰餐品牌之一。",
+    "franchise.title": "加盟方案",
+    "contact.title": "联系我们"
   }
+};
 
-  const savedLang = localStorage.getItem("lang") || "th";
-  setLanguage(savedLang);
-
-  document.querySelectorAll(".lang-flags img").forEach(flag => {
-    flag.addEventListener("click", () => {
-      setLanguage(flag.dataset.lang);
-    });
+function setLanguage(lang) {
+  document.querySelectorAll("[data-i18n]").forEach(el => {
+    const key = el.getAttribute("data-i18n");
+    if (translations[lang] && translations[lang][key]) {
+      el.innerText = translations[lang][key];
+    }
   });
+  localStorage.setItem("lang", lang);
+}
+
+const savedLang = localStorage.getItem("lang") || "th";
+setLanguage(savedLang);
+
+document.querySelectorAll(".lang-flags img").forEach(flag => {
+  flag.addEventListener("click", () => setLanguage(flag.dataset.lang));
+});
 </script>
 
 </body>
