--- a/index.html
+++ b/index.html
@@ -19,16 +19,18 @@
       color: #333;
       overflow-x: hidden;
     }
-    
-    header {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      background: #fff;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-      z-index: 1000;
-    }
-    
+    <header>
+  <nav>
+    <div>
+      <img src="logo/logo.png" alt="ครัวหลวง Logo" style="height: 40px;">
+    </div>
+    <div>
+      <a href="#home" data-i18n="menu.home">หน้าแรก</a>
+      <!-- ลิงก์อื่นๆ... -->
+    </div>
+    <!-- ส่วนภาษา... -->
+  </nav>
+</header>
     nav {
       display: flex;
       justify-content: space-between;
