--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
   <nav>
     <div>
       <!-- โลโก้ใน navigation -->
-      <img src="logo/logo.png" alt="ครัวหลวง" class="logo">
+      <img src="images/logo/logo.png" alt="Krualuang Logo">
     </div>
     <div>
       <a href="#home" data-i18n="menu.home">หน้าแรก</a>
