--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ครัวหลวง — Royal Thai Cuisine</title>
-  <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
     * {
@@ -80,7 +80,7 @@
       border-color: #d4af37;
     }
     
-    /* HERO SECTION */
+    /* HERO SECTION - Path รูปภาพถูกต้องแล้ว */
     .hero {
       position: relative;
       width: 100%;
@@ -291,10 +291,6 @@
         height: 35px;
       }
       
-      .hero {
-        /* ลบ padding-top และ height ออกเพื่อให้ JS จัดการ */
-      }
-      
       .hero-logo {
         height: 70px;
       }
@@ -329,7 +325,7 @@
 <header>
   <nav>
     <div>
-            <img src="images/logo/logo.png" alt="Krualuang Logo" class="logo"> 
+            <img src="images/logo/logo.png" alt="Krualuang Logo" class="logo">
     </div>
     <div>
       <a href="#home" data-i18n="menu.home">หน้าแรก</a>
@@ -351,90 +347,94 @@
   <div class="hero-content">
         <img src="images/logo/logo.png" alt="ครัวหลวง" class="hero-logo">
     <h4 data-i18n="hero.eyebrow">ครัวหลวง — รสชาติไทยต้นตำรับ</h4>
-    ...
-<!-- ABOUT -->
+    <h1 data-i18n="hero.title">Royal Thai Taste</h1>
+    <p data-i18n="hero.desc">ประสบการณ์อาหารไทยอันเลิศ พร้อมโอกาสแฟรนไชส์ทั่วลาวและไทย</p>
+    <div class="hero-buttons">
+      <a href="#franchise" data-i18n="hero.cta1">ดูแฟรนไชส์</a>
+      <a href="#contact" data-i18n="hero.cta2">นัดเยี่ยมชม</a>
+    </div>
+  </div>
+</section>
+
 <section id="about">
-  <h2 data-i18n="about.title">เกี่ยวกับครัวหลวง</h2>
-  <p data-i18n="about.text">
-    ครัวหลวงคือแบรนด์อาหารไทยที่เน้นความอร่อยแบบต้นตำรับ ผสานแฟรนไชส์ทันสมัย
-    ลงทุนเริ่มต้นหลักหมื่น สร้างยอดขายหลักล้านได้ง่าย ด้วยสูตรเฉพาะและระบบมาตรฐาน
-  </p>
+  <h2 data-i18n="about.title">เกี่ยวกับครัวหลวง</h2>
+  <p data-i18n="about.text">
+    ครัวหลวงคือแบรนด์อาหารไทยที่เน้นความอร่อยแบบต้นตำรับ ผสานแฟรนไชส์ทันสมัย
+    ลงทุนเริ่มต้นหลักหมื่น สร้างยอดขายหลักล้านได้ง่าย ด้วยสูตรเฉพาะและระบบมาตรฐาน
+  </p>
 </section>
 
-<!-- FRANCHISE -->
 <section id="franchise">
-  <h2 data-i18n="franchise.title">แพ็กเกจแฟรนไชส์</h2>
-  <p>เริ่มต้นธุรกิจของคุณกับครัวหลวงวันนี้</p>
-  
-  <div class="franchise-cards">
-    <div class="card">
-      <h3>ชุดเริ่มต้น</h3>
-      <div class="price">19,000 บาท</div>
-      <p>เหมาะสำหรับผู้เริ่มต้นธุรกิจอาหาร</p>
-    </div>
-    <div class="card">
-      <h3>ชุดมาตรฐาน</h3>
-      <div class="price">49,000 บาท</div>
-      <p>พร้อมอุปกรณ์ครบชุดและฝึกอบรม</p>
-    </div>
-    <div class="card">
-      <h3>ชุดพรีเมียม</h3>
-      <div class="price">99,000 บาท</div>
-      <p>สำหรับผู้ต้องการขยายหลายสาขา</p>
-    </div>
-  </div>
+  <h2 data-i18n="franchise.title">แพ็กเกจแฟรนไชส์</h2>
+  <p>เริ่มต้นธุรกิจของคุณกับครัวหลวงวันนี้</p>
+  
+  <div class="franchise-cards">
+    <div class="card">
+      <h3>ชุดเริ่มต้น</h3>
+      <div class="price">19,000 บาท</div>
+      <p>เหมาะสำหรับผู้เริ่มต้นธุรกิจอาหาร</p>
+    </div>
+    <div class="card">
+      <h3>ชุดมาตรฐาน</h3>
+      <div class="price">49,000 บาท</div>
+      <p>พร้อมอุปกรณ์ครบชุดและฝึกอบรม</p>
+    </div>
+    <div class="card">
+      <h3>ชุดพรีเมียม</h3>
+      <div class="price">99,000 บาท</div>
+      <p>สำหรับผู้ต้องการขยายหลายสาขา</p>
+    </div>
+  </div>
 </section>
 
-<!-- FAQ -->
 <section id="faq">
-  <h2 data-i18n="menu.faq">คำถามที่พบบ่อย</h2>
-  
-  <div class="faq-item">
-    <button class="faq-question">ต้องลงทุนเริ่มต้นเท่าไหร่?</button>
-    <div class="faq-answer">
-      <p>แพ็กเกจเริ่มต้นอยู่ที่ 19,000 บาท ซึ่งรวมค่าสิทธิแฟรนไชส์และคู่มือการดำเนินงานเบื้องต้นแล้ว</p>
-    </div>
-  </div>
-  
-  <div class="faq-item">
-    <button class="faq-question">ระยะเวลาคืนทุนประมาณกี่เดือน?</button>
-    <div class="faq-answer">
-      <p>โดยเฉลี่ยแล้ว แฟรนไชส์ของเราคืนทุนภายใน 6-12 เดือน ขึ้นอยู่กับทำเลและความขยันของเจ้าของร้าน</p>
-    </div>
-  </div>
-  
-  <div class="faq-item">
-    <button class="faq-question">ได้รับความช่วยเหลืออะไรบ้าง?</button>
-    <div class="faq-answer">
-      <p>เรามีทีมสนับสนุนครบวงจร ตั้งแต่การฝึกอบรม การตลาด จนถึงการให้คำปรึกษาด้านการจัดการ</p>
-    </div>
-  </div>
+  <h2 data-i18n="menu.faq">คำถามที่พบบ่อย</h2>
+  
+  <div class="faq-item">
+    <button class="faq-question">ต้องลงทุนเริ่มต้นเท่าไหร่?</button>
+    <div class="faq-answer">
+      <p>แพ็กเกจเริ่มต้นอยู่ที่ 19,000 บาท ซึ่งรวมค่าสิทธิแฟรนไชส์และคู่มือการดำเนินงานเบื้องต้นแล้ว</p>
+    </div>
+  </div>
+  
+  <div class="faq-item">
+    <button class="faq-question">ระยะเวลาคืนทุนประมาณกี่เดือน?</button>
+    <div class="faq-answer">
+      <p>โดยเฉลี่ยแล้ว แฟรนไชส์ของเราคืนทุนภายใน 6-12 เดือน ขึ้นอยู่กับทำเลและความขยันของเจ้าของร้าน</p>
+    </div>
+    </div>
+  
+  <div class="faq-item">
+    <button class="faq-question">ได้รับความช่วยเหลืออะไรบ้าง?</button>
+    <div class="faq-answer">
+      <p>เรามีทีมสนับสนุนครบวงจร ตั้งแต่การฝึกอบรม การตลาด จนถึงการให้คำปรึกษาด้านการจัดการ</p>
+    </div>
+  </div>
 </section>
 
-<!-- CONTACT -->
 <section id="contact">
-  <h2 data-i18n="contact.title">ติดต่อแฟรนไชส์</h2>
-  
-  <div class="contact-info">
-    <div class="contact-item">
-      <i class="fas fa-phone"></i>
-      <p>โทร: +856 20 1234 5678</p>
-    </div>
-    <div class="contact-item">
-      <i class="fab fa-line"></i>
-      <p>Line: @krualuang</p>
-    </div>
-    <div class="contact-item">
-      <i class="fas fa-envelope"></i>
-      <p>Email: info@krualuang.com</p>
-    </div>
-  </div>
-  
-  <div style="text-align: center;">
-    <a href="https://line.me/" class="hero-buttons a" style="display: inline-block;">
-      <i class="fab fa-line"></i> แชทกับเรา
-    </a>
-  </div>
+  <h2 data-i18n="contact.title">ติดต่อแฟรนไชส์</h2>
+  
+  <div class="contact-info">
+    <div class="contact-item">
+      <i class="fas fa-phone"></i>
+      <p>โทร: +856 20 1234 5678</p>
+    </div>
+    <div class="contact-item">
+      <i class="fab fa-line"></i>
+      <p>Line: @krualuang</p>
+    </div>
+    <div class="contact-item">
+      <i class="fas fa-envelope"></i>
+      <p>Email: info@krualuang.com</p>
+    </div>
+  </div>
+  
+  <div style="text-align: center;">
+    <a href="https://line.me/" class="hero-buttons a" style="display: inline-block;">
+      <i class="fab fa-line"></i> แชทกับเรา
+    </a>
+  </div>
 </section>
 
 <footer>© 2025 Krualuang — Royal Thai Cuisine</footer>
@@ -442,133 +442,133 @@
 <script>
 // JavaScript สำหรับระบบภาษาและฟังก์ชันอื่นๆ
 const translations = {
-  th: {
-    "menu.home": "หน้าแรก",
-    "menu.about": "เกี่ยวกับเรา",
-    "menu.franchise": "แฟรนไชส์",
-    "menu.faq": "คำถามที่พบบ่อย",
-    "menu.contact": "ติดต่อ",
-    "hero.eyebrow": "ครัวหลวง — รสชาติไทยต้นตำรับ",
-    "hero.title": "Royal Thai Taste",
-    "hero.desc": "ประสบการณ์อาหารไทยอันเลิศ พร้อมโอกาสแฟรนไชส์ทั่วลาวและไทย",
-    "hero.cta1": "ดูแฟรนไชส์",
-    "hero.cta2": "นัดเยี่ยมชม",
-    "about.title": "เกี่ยวกับครัวหลวง",
-    "about.text": "ครัวหลวงคือแบรนด์อาหารไทยที่เน้นความอร่อยแบบต้นตำรับ ผสานแฟรนไชส์ทันสมัย ลงทุนเริ่มต้นหลักหมื่น สร้างยอดขายหลักล้านได้ง่าย ด้วยสูตรเฉพาะและระบบมาตรฐาน",
-    "franchise.title": "แพ็กเกจแฟรนไชส์",
-    "contact.title": "ติดต่อแฟรนไชส์"
-  },
-  la: {
-    "menu.home": "ໜ້າຫຼັກ",
-    "menu.about": "ກ່ຽວກັບພວກເຮົາ",
-    "menu.franchise": "ແຟຣນໄຊສ໌",
-    "menu.faq": "ຄຳຖາມທີ່ພົບເປັນປະຈຳ",
-    "menu.contact": "ຕິດຕໍ່",
-    "hero.eyebrow": "ຄັວຫຼວງ — ອາຫານໄທຕົ້ນສະບັບ",
-    "hero.title": "ຮັບປະສົບການອາຫານຄັວຫຼວງ",
-    "hero.desc": "ປະສົບການອາຫານທີ່ປະທັບໃຈ ແລະ ໂອກາດແຟຣນໄຊສ໌ ທົ່ວລາວ-ໄທ",
-    "hero.cta1": "ເບິ່ງແຟຣນໄຊສ໌",
-    "hero.cta2": "ນັດຢ້ຽມຊົມ",
-    "about.title": "ກ່ຽວກັບຄັວຫຼວງ",
-    "about.text": "ຄັວຫຼວງເປັນແບຣນອາຫານໄທຕົ້ນສະບັບ ທີ່ມີລະບົບແຟຣນໄຊສ໌ທັນສະໄໝ ລົງທຶນນ້ອຍ ແຕ່ສາມາດສ້າງລາຍໄດ້ຫຼາຍ.",
-    "franchise.title": "ແພັກແກັດແຟຣນໄຊສ໌",
-    "contact.title": "ຕິດຕໍ່ແຟຣນໄຊສ໌"
-  },
-  en: {
-    "menu.home": "Home",
-    "menu.about": "About Us",
-    "menu.franchise": "Franchise",
-    "menu.faq": "FAQ",
-    "menu.contact": "Contact",
-    "hero.eyebrow": "Krualuang — Authentic Thai Cuisine",
-    "hero.title": "Royal Thai Taste",
-    "hero.desc": "Fine dining and franchise opportunities across Laos & Thailand.",
-    "hero.cta1": "Explore Franchise",
-    "hero.cta2": "Book a Visit",
-    "about.title": "About Krualuang",
-    "about.text": "Krualuang offers authentic Thai flavors with modern franchise opportunities. Start small and scale fast with proven recipes and systems.",
-    "franchise.title": "Franchise Packages",
-    "contact.title": "Contact Franchise"
-  },
-  zh: {
-    "menu.home": "首页",
-    "menu.about": "关于我们",
-    "menu.franchise": "加盟",
-    "menu.faq": "常见问题",
-    "menu.contact": "联系我们",
-    "hero.eyebrow": "皇家厨房 — 正宗泰国美食",
-    "hero.title": "皇家泰式风味",
-    "hero.desc": "精致用餐体验与加盟机会，遍及老挝与泰国。",
-    "hero.cta1": "查看加盟方案",
-    "hero.cta2": "预约参观",
-    "about.title": "关于皇家厨房",
-    "about.text": "皇家厨房提供正宗泰式风味与现代加盟体系，投资少、回报快，是东南亚增长最快的泰餐品牌之一。",
-    "franchise.title": "加盟方案",
-    "contact.title": "联系我们"
-  }
+  th: {
+    "menu.home": "หน้าแรก",
+    "menu.about": "เกี่ยวกับเรา",
+    "menu.franchise": "แฟรนไชส์",
+    "menu.faq": "คำถามที่พบบ่อย",
+    "menu.contact": "ติดต่อ",
+    "hero.eyebrow": "ครัวหลวง — รสชาติไทยต้นตำรับ",
+    "hero.title": "Royal Thai Taste",
+    "hero.desc": "ประสบการณ์อาหารไทยอันเลิศ พร้อมโอกาสแฟรนไชส์ทั่วลาวและไทย",
+    "hero.cta1": "ดูแฟรนไชส์",
+    "hero.cta2": "นัดเยี่ยมชม",
+    "about.title": "เกี่ยวกับครัวหลวง",
+    "about.text": "ครัวหลวงคือแบรนด์อาหารไทยที่เน้นความอร่อยแบบต้นตำรับ ผสานแฟรนไชส์ทันสมัย ลงทุนเริ่มต้นหลักหมื่น สร้างยอดขายหลักล้านได้ง่าย ด้วยสูตรเฉพาะและระบบมาตรฐาน",
+    "franchise.title": "แพ็กเกจแฟรนไชส์",
+    "contact.title": "ติดต่อแฟรนไชส์"
+  },
+  la: {
+    "menu.home": "ໜ້າຫຼັກ",
+    "menu.about": "ກ່ຽວກັບພວກເຮົາ",
+    "menu.franchise": "ແຟຣນໄຊສ໌",
+    "menu.faq": "ຄຳຖາມທີ່ພົບເປັນປະຈຳ",
+    "menu.contact": "ຕິດຕໍ່",
+    "hero.eyebrow": "ຄັວຫຼວງ — ອາຫານໄທຕົ້ນສະບັບ",
+    "hero.title": "ຮັບປະສົບການອາຫານຄັວຫຼວງ",
+    "hero.desc": "ປະສົບການອາຫານທີ່ປະທັບໃຈ ແລະ ໂອກາດແຟຣນໄຊສ໌ ທົ່ວລາວ-ໄທ",
+    "hero.cta1": "ເບິ່ງແຟຣນໄຊສ໌",
+    "hero.cta2": "ນັດຢ້ຽມຊົມ",
+    "about.title": "ກ່ຽວກັບຄັວຫຼວງ",
+    "about.text": "ຄັວຫຼວງເປັນແບຣນອາຫານໄທຕົ້ນສະບັບ ທີ່ມີລະບົບແຟຣນໄຊສ໌ທັນສະໄໝ ລົງທຶນນ້ອຍ ແຕ່ສາມາດສ້າງລາຍໄດ້ຫຼາຍ.",
+    "franchise.title": "ແພັກແກັດແຟຣນໄຊສ໌",
+    "contact.title": "ຕິດຕໍ່ແຟຣນໄຊສ໌"
+  },
+  en: {
+    "menu.home": "Home",
+    "menu.about": "About Us",
+    "menu.franchise": "Franchise",
+    "menu.faq": "FAQ",
+    "menu.contact": "Contact",
+    "hero.eyebrow": "Krualuang — Authentic Thai Cuisine",
+    "hero.title": "Royal Thai Taste",
+    "hero.desc": "Fine dining and franchise opportunities across Laos & Thailand.",
+    "hero.cta1": "Explore Franchise",
+    "hero.cta2": "Book a Visit",
+    "about.title": "About Krualuang",
+    "about.text": "Krualuang offers authentic Thai flavors with modern franchise opportunities. Start small and scale fast with proven recipes and systems.",
+    "franchise.title": "Franchise Packages",
+    "contact.title": "Contact Franchise"
+  },
+  zh: {
+    "menu.home": "首页",
+    "menu.about": "关于我们",
+    "menu.franchise": "加盟",
+    "menu.faq": "常见问题",
+    "menu.contact": "联系我们",
+    "hero.eyebrow": "皇家厨房 — 正宗泰国美食",
+    "hero.title": "皇家泰式风味",
+    "hero.desc": "精致用餐体验与加盟机会，遍及老挝与泰国。",
+    "hero.cta1": "查看加盟方案",
+    "hero.cta2": "预约参观",
+    "about.title": "关于皇家厨房",
+    "about.text": "皇家厨房提供正宗泰式风味与现代加盟体系，投资少、回报快，是东南亚增长最快的泰餐品牌之一。",
+    "franchise.title": "加盟方案",
+    "contact.title": "联系我们"
+  }
 };
 
 function setLanguage(lang) {
-  document.querySelectorAll("[data-i18n]").forEach(el => {
-    const key = el.getAttribute("data-i18n");
-    if (translations[lang] && translations[lang][key]) {
-      el.innerText = translations[lang][key];
-    }
-  });
-  localStorage.setItem("lang", lang);
+  document.querySelectorAll("[data-i18n]").forEach(el => {
+    const key = el.getAttribute("data-i18n");
+    if (translations[lang] && translations[lang][key]) {
+      el.innerText = translations[lang][key];
+    }
+  });
+  localStorage.setItem("lang", lang);
 }
 
 const savedLang = localStorage.getItem("lang") || "th";
 setLanguage(savedLang);
 
 document.querySelectorAll(".lang-flags img").forEach(flag => {
-  flag.addEventListener("click", () => setLanguage(flag.dataset.lang));
+  flag.addEventListener("click", () => setLanguage(flag.dataset.lang));
 });
 
 // FAQ Accordion
 document.querySelectorAll('.faq-question').forEach(button => {
-  button.addEventListener('click', () => {
-    const answer = button.nextElementSibling;
-    
-    // Close all other answers
-    document.querySelectorAll('.faq-answer').forEach(item => {
-      if (item !== answer) {
-        item.classList.remove('active');
-      }
-    });
-    
-    // Toggle current answer
-    answer.classList.toggle('active');
-  });
+  button.addEventListener('click', () => {
+    const answer = button.nextElementSibling;
+    
+    // Close all other answers
+    document.querySelectorAll('.faq-answer').forEach(item => {
+      if (item !== answer) {
+        item.classList.remove('active');
+      }
+    });
+    
+    // Toggle current answer
+    answer.classList.toggle('active');
+  });
 });
 
 // Smooth scroll for anchor links
 document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-  anchor.addEventListener('click', function (e) {
-    e.preventDefault();
-    const target = document.querySelector(this.getAttribute('href'));
-    if (target) {
-      target.scrollIntoView({
-        behavior: 'smooth',
-        block: 'start'
-      });
-    }
-  });
+  anchor.addEventListener('click', function (e) {
+    e.preventDefault();
+    const target = document.querySelector(this.getAttribute('href'));
+    if (target) {
+      target.scrollIntoView({
+        behavior: 'smooth',
+        block: 'start'
+      });
+    }
+  });
 });
 
 // แก้ไขปัญหา Hero Section
 document.addEventListener('DOMContentLoaded', function() {
-  const hero = document.querySelector('.hero');
-  const header = document.querySelector('header');
-  
-  function setHeroHeight() {
-    const headerHeight = header.offsetHeight;
-    hero.style.height = `calc(100vh - ${headerHeight}px)`;
-    hero.style.marginTop = `${headerHeight}px`;
-  }
-  
-  setHeroHeight();
-  window.addEventListener('resize', setHeroHeight);
+  const hero = document.querySelector('.hero');
+  const header = document.querySelector('header');
+  
+  function setHeroHeight() {
+    const headerHeight = header.offsetHeight;
+    hero.style.height = `calc(100vh - ${headerHeight}px)`;
+    hero.style.marginTop = `${headerHeight}px`;
+  }
+  
+  setHeroHeight();
+  window.addEventListener('resize', setHeroHeight);
 });
 </script>
 
