--- a/index.html
+++ b/index.html
@@ -77,20 +77,21 @@
       border-color: #d4af37;
     }
 
-    /* HERO SECTION - แก้ไขให้เต็มจอด้วย JS */
-    .hero {
-      position: relative;
-      width: 100%;
-      /* height: 100vh; ถูกควบคุมด้วย JS */
-      background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), 
-                  url('https://images.unsplash.com/photo-1504674900247-0877df9cc836?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80') center/cover no-repeat;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      color: white;
-      text-align: center;
-      margin: 0;
-    }
+    /* เปลี่ยนโค้ดในไฟล์ CSS (หรือ <style> block) */
+.hero {
+    position: relative;
+    width: 100%;
+    /* ส่วนนี้คือส่วนที่เปลี่ยน */
+    background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), 
+                  url('images/hero/hero-bg.jpg') center/cover no-repeat; 
+    /* -------------------------------------- */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    text-align: center;
+    margin: 0;
+}
 
     .hero-content {
       position: relative;
