--- a/index.html
+++ b/index.html
@@ -478,13 +478,12 @@
       <a href="#menu" data-i18n="menu.menu">เมนู</a>
       <a href="#gallery" data-i18n="menu.gallery">แกลเลอรี่</a>
       <a href="#contact" data-i18n="menu.contact">ติดต่อ</a>
-    </div>
     <div class="lang-flags">
-      <img src="https://flagcdn.com/w20/th.png" data-lang="th" title="ไทย" alt="ธงชาติไทย">
-      <img src="https://flagcdn.com/w20/la.png" data-lang="la" title="ລາວ" alt="ธงชาติลาว">
-      <img src="https://flagcdn.com/w20/gb.png" data-lang="en" title="English" alt="British flag">
-      <img src="https://flagcdn.com/w20/cn.png" data-lang="zh" title="中文" alt="ธงชาติจีน">
-    </div>
+  <img src="https://flagcdn.com/w20/th.png" data-lang="th" title="ไทย">
+  <img src="https://flagcdn.com/w20/la.png" data-lang="la" title="ລາວ">
+  <img src="https://flagcdn.com/w20/gb.png" data-lang="en" title="English">
+  <img src="https://flagcdn.com/w20/cn.png" data-lang="zh" title="中文">
+</div>
   </nav>
 </header>
 
